@@ -1,6 +1,7 @@
 AUX 20200314-stylemap.patch 869 BLAKE2B a5907efaa1357f5b445eadfa951d9558de78eb1f8eb271cac15318a6d1e7d95c4d56918ca41307c9ff74ab05bf3cc373a5189ccaa5c76282b2c0c5d6834bfaba SHA512 1f0e363d42606fb506dd6f747ac250cce6ab4b5bf49400095cab9fd48b68232a8d58325147d2e1f7ca223093d36edf020f70f383bb0bf24f3a2f2fc3b35fb747
 AUX 20200314-tilepath.patch 1142 BLAKE2B 61aa804682a5e486c2f131fd9d81fc5d29ca946f18d9d11a323d4c49cfa8c9404b846e2afb6ac4dbf00af78133f27819f72f678298c3abfaeecd576877ac1ed4 SHA512 2cbd0ac47c211ceda2e2e4d6b62a69432e084ec664d58ff5e259f2d1eee9b70b64610d4a428d5f86305c8427c21dd6a00944a86a995c8cc5f9aed63df4aa5a31
 DIST fontforge-20200314.tar.xz 13850076 BLAKE2B 5e6ae3b7940a5b3b08811abdfc9d151f231e6d457b219eb0c666e1b831db815b696f345eda0d4d423b7e340f56fca67205734ae19903b3815381080d34b5e95c SHA512 09f5dc93f87ca63668d72d108690604489d6b3cec7eedff1c07ad6d1ce5eae442ab60e79e71ae8b99e9808f3551011788025a86ffc3a9738518d99761d849975
+EBUILD fontforge-20200314-r1.ebuild 2643 BLAKE2B 17258d1213fdad33da83c2fb7516602d31a0d8f3f424d631fb4c5152c97cb6dbd9ff95769955144d18a2df7ccfb7f30aabeecdefefb17a94ac49fcaf343f5df9 SHA512 9c8b1c876652a57ece214afe021706c0b9e7bde7f27303e31e4ced77edb3de1dde565978caff22614e895af0cbe0ea4391f756453c569b487e74ad737c0d0e64
 EBUILD fontforge-20200314.ebuild 2644 BLAKE2B 25dc7d70e41c1e9c926c87d2da3b4bb844b71f4bd1e3c8a60de1fa5771d615b4ae0851f6a41e97393a140c05d24089ce68baa7b52a312983bf2679c2dc923b0a SHA512 a0fbdf2fa1e7c8a3a700660b9f4022249e4503104453d1694b8d69dd32dd40cf3f4cce924f50cbc06a55a8a65be2c62ba2703978403221d269c95d3fbd097ed0
-MISC ChangeLog 325 BLAKE2B 83c3836ed01b53755b41aa5139b799d607542df15995b25971d7c6fbff603db7d10e6df9ecc4addc66bbdbbaee8975534658e278f9c618d15e14e6db7de68f90 SHA512 c12d3892f0987592bae20b06faaa2abe79a66e17cbb47962d0061d4cb98b33e686da50f5a6a52f8f998f811d3879de0b6c30ceeaf60982d12394700b839ef6ca
+MISC ChangeLog 379 BLAKE2B 5935a823c3ce4493b53eb38113929edbfdca75324023269d695406fd4be1bfcfe6f4bbea930a5ba044b55731635a84972670a03897e56aa59afd9838e8f0b55b SHA512 4bfc5d6ac8e6433adcf2760cf81024b4e026064c66c2c91c53c4f8b9685fc166f75bd0c175d157d419bf661b806fdb09a4ba7000ec9e1aea530c038ccc2410ba
 MISC metadata.xml 1177 BLAKE2B 1bc538ca6b7bdaa523c207daeeb1b497daeb3b55754f195ed300063e81644ef968b1e1b2377a9a1740baa01fb99743e39ba0675af71d3f252128de1e50288763 SHA512 92d9d64df15f19d2a2e188d1583df64ca8f2ea79c0c5f8db7bda690ea1b194b8c856c65aad117df622f33e06a6f7effb6a53d879800844962dcd5bc91fa86a23
